src/compiler/snapshots/isa__compiler__parser__tests__calls-3.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r\"(>>=) (None) \\x -> return x\").parse_expr()"
---
Ok(
    Expr {
        kind: Call {
            callee: Expr {
                kind: Call {
                    callee: Expr {
                        kind: Operator(
                            Ident {
                                ident: ">>=",
                                span: SpanData { file_id: 0, lo: 1, hi: 4 },
                            },
                        ),
                        span: SpanData { file_id: 0, lo: 0, hi: 5 },
                        ty: (),
                    },
                    arg: Expr {
                        kind: Paren(
                            Expr {
                                kind: Path(
                                    Path {
                                        segments: [
                                            Ident {
                                                ident: "None",
                                                span: SpanData { file_id: 0, lo: 7, hi: 11 },
                                            },
                                        ],
                                    },
                                ),
                                span: SpanData { file_id: 0, lo: 7, hi: 11 },
                                ty: (),
                            },
                        ),
                        span: SpanData { file_id: 0, lo: 6, hi: 12 },
                        ty: (),
                    },
                },
                span: SpanData { file_id: 0, lo: 0, hi: 12 },
                ty: (),
            },
            arg: Expr {
                kind: Fn {
                    param: Param {
                        pat: Pat {
                            kind: Constructor {
                                name: Path {
                                    segments: [
                                        Ident {
                                            ident: "x",
                                            span: SpanData { file_id: 0, lo: 14, hi: 15 },
                                        },
                                    ],
                                },
                                args: [],
                            },
                            span: SpanData { file_id: 0, lo: 14, hi: 15 },
                            ty: (),
                        },
                    },
                    expr: Expr {
                        kind: Call {
                            callee: Expr {
                                kind: Path(
                                    Path {
                                        segments: [
                                            Ident {
                                                ident: "return",
                                                span: SpanData { file_id: 0, lo: 19, hi: 25 },
                                            },
                                        ],
                                    },
                                ),
                                span: SpanData { file_id: 0, lo: 19, hi: 25 },
                                ty: (),
                            },
                            arg: Expr {
                                kind: Path(
                                    Path {
                                        segments: [
                                            Ident {
                                                ident: "x",
                                                span: SpanData { file_id: 0, lo: 26, hi: 27 },
                                            },
                                        ],
                                    },
                                ),
                                span: SpanData { file_id: 0, lo: 26, hi: 27 },
                                ty: (),
                            },
                        },
                        span: SpanData { file_id: 0, lo: 19, hi: 27 },
                        ty: (),
                    },
                },
                span: SpanData { file_id: 0, lo: 13, hi: 27 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, lo: 0, hi: 27 },
        ty: (),
    },
)
