src/compiler/snapshots/isa__compiler__parser__tests__calls.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"Some x\").parse_expr()"
---
Ok(
    Expr {
        kind: Call {
            callee: Expr {
                kind: Path(
                    Path {
                        segments: [
                            Ident {
                                ident: "Some",
                                span: SpanData { file_id: 0, lo: 0, hi: 4 },
                            },
                        ],
                    },
                ),
                span: SpanData { file_id: 0, lo: 0, hi: 4 },
                ty: (),
            },
            arg: Expr {
                kind: Path(
                    Path {
                        segments: [
                            Ident {
                                ident: "x",
                                span: SpanData { file_id: 0, lo: 5, hi: 6 },
                            },
                        ],
                    },
                ),
                span: SpanData { file_id: 0, lo: 5, hi: 6 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, lo: 0, hi: 6 },
        ty: (),
    },
)
