src/compiler/snapshots/isa__compiler__parser__tests__ifs-3.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"if !false then !true else if false then true else false\").parse_expr()"
---
Ok(
    Expr {
        kind: If {
            cond: Expr {
                kind: Prefix {
                    op: Ident {
                        ident: "!",
                        span: SpanData { file_id: 0, lo: 3, hi: 4 },
                    },
                    expr: Expr {
                        kind: Bool(
                            false,
                        ),
                        span: SpanData { file_id: 0, lo: 4, hi: 9 },
                        ty: (),
                    },
                },
                span: SpanData { file_id: 0, lo: 3, hi: 9 },
                ty: (),
            },
            then: Expr {
                kind: Prefix {
                    op: Ident {
                        ident: "!",
                        span: SpanData { file_id: 0, lo: 15, hi: 16 },
                    },
                    expr: Expr {
                        kind: Bool(
                            true,
                        ),
                        span: SpanData { file_id: 0, lo: 16, hi: 20 },
                        ty: (),
                    },
                },
                span: SpanData { file_id: 0, lo: 15, hi: 20 },
                ty: (),
            },
            otherwise: Expr {
                kind: If {
                    cond: Expr {
                        kind: Bool(
                            false,
                        ),
                        span: SpanData { file_id: 0, lo: 29, hi: 34 },
                        ty: (),
                    },
                    then: Expr {
                        kind: Bool(
                            true,
                        ),
                        span: SpanData { file_id: 0, lo: 40, hi: 44 },
                        ty: (),
                    },
                    otherwise: Expr {
                        kind: Bool(
                            false,
                        ),
                        span: SpanData { file_id: 0, lo: 50, hi: 55 },
                        ty: (),
                    },
                },
                span: SpanData { file_id: 0, lo: 26, hi: 55 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, lo: 0, hi: 55 },
        ty: (),
    },
)
