src/compiler/snapshots/isa__compiler__parser__tests__infix-5.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"1 * 2 * 3 + ((() & (1) ^^ []) >>= 'd')\").parse_expr()"
---
Ok(
    Expr {
        kind: Infix {
            op: Ident {
                ident: "+",
                span: SpanData { file_id: 0, start: 10, end: 11 },
            },
            lhs: Expr {
                kind: Infix {
                    op: Ident {
                        ident: "*",
                        span: SpanData { file_id: 0, start: 6, end: 7 },
                    },
                    lhs: Expr {
                        kind: Infix {
                            op: Ident {
                                ident: "*",
                                span: SpanData { file_id: 0, start: 2, end: 3 },
                            },
                            lhs: Expr {
                                kind: Int(
                                    1,
                                ),
                                span: SpanData { file_id: 0, start: 0, end: 1 },
                                ty: (),
                            },
                            rhs: Expr {
                                kind: Int(
                                    2,
                                ),
                                span: SpanData { file_id: 0, start: 4, end: 5 },
                                ty: (),
                            },
                        },
                        span: SpanData { file_id: 0, start: 0, end: 5 },
                        ty: (),
                    },
                    rhs: Expr {
                        kind: Int(
                            3,
                        ),
                        span: SpanData { file_id: 0, start: 8, end: 9 },
                        ty: (),
                    },
                },
                span: SpanData { file_id: 0, start: 0, end: 9 },
                ty: (),
            },
            rhs: Expr {
                kind: Paren(
                    Expr {
                        kind: Infix {
                            op: Ident {
                                ident: ">>=",
                                span: SpanData { file_id: 0, start: 30, end: 33 },
                            },
                            lhs: Expr {
                                kind: Paren(
                                    Expr {
                                        kind: Infix {
                                            op: Ident {
                                                ident: "^^",
                                                span: SpanData { file_id: 0, start: 23, end: 25 },
                                            },
                                            lhs: Expr {
                                                kind: Infix {
                                                    op: Ident {
                                                        ident: "&",
                                                        span: SpanData { file_id: 0, start: 17, end: 18 },
                                                    },
                                                    lhs: Expr {
                                                        kind: Tuple(
                                                            [],
                                                        ),
                                                        span: SpanData { file_id: 0, start: 14, end: 16 },
                                                        ty: (),
                                                    },
                                                    rhs: Expr {
                                                        kind: Paren(
                                                            Expr {
                                                                kind: Int(
                                                                    1,
                                                                ),
                                                                span: SpanData { file_id: 0, start: 20, end: 21 },
                                                                ty: (),
                                                            },
                                                        ),
                                                        span: SpanData { file_id: 0, start: 19, end: 22 },
                                                        ty: (),
                                                    },
                                                },
                                                span: SpanData { file_id: 0, start: 14, end: 22 },
                                                ty: (),
                                            },
                                            rhs: Expr {
                                                kind: List(
                                                    [],
                                                ),
                                                span: SpanData { file_id: 0, start: 26, end: 28 },
                                                ty: (),
                                            },
                                        },
                                        span: SpanData { file_id: 0, start: 14, end: 28 },
                                        ty: (),
                                    },
                                ),
                                span: SpanData { file_id: 0, start: 13, end: 29 },
                                ty: (),
                            },
                            rhs: Expr {
                                kind: Char(
                                    100,
                                ),
                                span: SpanData { file_id: 0, start: 34, end: 37 },
                                ty: (),
                            },
                        },
                        span: SpanData { file_id: 0, start: 13, end: 37 },
                        ty: (),
                    },
                ),
                span: SpanData { file_id: 0, start: 12, end: 38 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, start: 0, end: 38 },
        ty: (),
    },
)
