src/compiler/snapshots/isa__compiler__parser__tests__infix.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"1 + 1\").parse_expr()"
---
Ok(
    Expr {
        kind: Infix {
            op: Ident {
                ident: "+",
                span: SpanData { file_id: 0, lo: 2, hi: 3 },
            },
            lhs: Expr {
                kind: Int(
                    1,
                ),
                span: SpanData { file_id: 0, lo: 0, hi: 1 },
                ty: (),
            },
            rhs: Expr {
                kind: Int(
                    1,
                ),
                span: SpanData { file_id: 0, lo: 4, hi: 5 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, lo: 0, hi: 5 },
        ty: (),
    },
)
