src/compiler/snapshots/isa__compiler__parser__tests__lambdas-2.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r\"\\(a,b) -> a + b\").parse_expr()"
---
Ok(
    Expr {
        kind: Fn {
            param: Param {
                pat: Pat {
                    kind: Tuple(
                        [
                            Pat {
                                kind: Constructor {
                                    name: Path {
                                        segments: [
                                            Ident {
                                                ident: "a",
                                                span: SpanData { file_id: 0, lo: 2, hi: 3 },
                                            },
                                        ],
                                    },
                                    args: [],
                                },
                                span: SpanData { file_id: 0, lo: 2, hi: 3 },
                                ty: (),
                            },
                            Pat {
                                kind: Constructor {
                                    name: Path {
                                        segments: [
                                            Ident {
                                                ident: "b",
                                                span: SpanData { file_id: 0, lo: 4, hi: 5 },
                                            },
                                        ],
                                    },
                                    args: [],
                                },
                                span: SpanData { file_id: 0, lo: 4, hi: 5 },
                                ty: (),
                            },
                        ],
                    ),
                    span: SpanData { file_id: 0, lo: 1, hi: 6 },
                    ty: (),
                },
            },
            expr: Expr {
                kind: Infix {
                    op: Ident {
                        ident: "+",
                        span: SpanData { file_id: 0, lo: 12, hi: 13 },
                    },
                    lhs: Expr {
                        kind: Path(
                            Path {
                                segments: [
                                    Ident {
                                        ident: "a",
                                        span: SpanData { file_id: 0, lo: 10, hi: 11 },
                                    },
                                ],
                            },
                        ),
                        span: SpanData { file_id: 0, lo: 10, hi: 11 },
                        ty: (),
                    },
                    rhs: Expr {
                        kind: Path(
                            Path {
                                segments: [
                                    Ident {
                                        ident: "b",
                                        span: SpanData { file_id: 0, lo: 14, hi: 15 },
                                    },
                                ],
                            },
                        ),
                        span: SpanData { file_id: 0, lo: 14, hi: 15 },
                        ty: (),
                    },
                },
                span: SpanData { file_id: 0, lo: 10, hi: 15 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, lo: 0, hi: 15 },
        ty: (),
    },
)
